# snakemake-storage-plugin-fs

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: further.md  intro.md
snakemake_storage_plugin_fs/: __init__.py  utils.py
tests/: tests.py
